--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,38 @@
 [versions]
-androidGradlePlugin = "8.2.0"
-kotlin = "1.8.0"
-compose-compiler = "1.4.0"
-compose = "1.3.3"
-lifecycle = "2.6.1"
-material3 = "1.1.0-alpha05"
-media3 = "1.1.1"
-room = "2.5.2"
-hilt = "2.46.1"
-ktor = "2.2.2"
+ksp = "1.9.21-1.0.16"
+androidGradlePlugin = "8.3.0-alpha18"
+kotlin = "1.9.21"
+compose-compiler = "1.5.6"
+compose = "1.5.4"
+lifecycle = "2.6.2"
+material3 = "1.1.2"
+media3 = "1.2.0"
+room = "2.6.1"
+hilt = "2.50"
+ktor = "2.3.7"
+
+#Firebase, GMS...
+firebaseAuth = "22.3.0"
+gmsPlayServicesAuth = "20.7.0"
+googleServices = "4.4.0"
+firebaseBom = "32.7.0"
+firebaseCrashlyticsGradle = "2.9.9"
+
+androidx-baselineprofile = "1.2.2"
 
 [libraries]
-guava = { group = "com.google.guava", name = "guava", version = "31.0.1-android" }
+guava = { group = "com.google.guava", name = "guava", version = "31.0.1-jre" }
 coroutines-guava = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-guava", version = "1.7.1" }
 concurrent-futures = { group = "androidx.concurrent", name = "concurrent-futures-ktx", version = "1.1.0" }
 
 gradle = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
-activity = { group = "androidx.activity", name = "activity-compose", version = "1.7.2" }
-navigation = { group = "androidx.navigation", name = "navigation-compose", version = "2.5.3" }
-hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version = "1.0.0" }
+activity = { group = "androidx.activity", name = "activity-compose", version = "1.8.2" }
+navigation = { group = "androidx.navigation", name = "navigation-compose", version = "2.7.6" }
+hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version = "1.1.0" }
 datastore = { group = "androidx.datastore", name = "datastore-preferences", version = "1.0.0" }
 
 compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "compose" }
-compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version = "1.3.1" }
+compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version = "1.5.4" }
 compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
 compose-ui-util = { group = "androidx.compose.ui", name = "ui-util", version.ref = "compose" }
 compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose" }
@@ -33,7 +43,7 @@ compose-reorderable = { group = "org.burnoutcrew.composereorderable", name = "re
 viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 
-material = { group = "androidx.compose.material", name = "material", version = "1.4.0-beta02" }
+material = { group = "androidx.compose.material", name = "material", version = "1.5.4" }
 
 material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 material3-windowsize = { group = "androidx.compose.material3", name = "material3-window-size-class", version.ref = "material3" }
@@ -69,23 +79,35 @@ brotli = { group = "org.brotli", name = "dec", version = "0.1.2" }
 
 opencc4j = { group = "com.github.houbb", name = "opencc4j", version = "1.7.2" }
 
-desugaring = { group = "com.android.tools", name = "desugar_jdk_libs", version = "1.1.5" }
+desugaring = { group = "com.android.tools", name = "desugar_jdk_libs", version = "2.0.4" }
 
 junit = { group = "junit", name = "junit", version = "4.13.2" }
 
 timber = { group = "com.jakewharton.timber", name = "timber", version = "4.7.1" }
 
-google-services = { module = "com.google.gms:google-services", version = "4.3.15" }
-firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version = "32.2.3" }
+google-services = { module = "com.google.gms:google-services", version.ref = "googleServices" }
+firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
 firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics-ktx" }
 firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics-ktx" }
-firebase-crashlytics-plugin = { module = "com.google.firebase:firebase-crashlytics-gradle", version = "2.9.9" }
+firebase-crashlytics-plugin = { module = "com.google.firebase:firebase-crashlytics-gradle", version.ref= "firebaseCrashlyticsGradle" }
 firebase-config = { group = "com.google.firebase", name = "firebase-config-ktx" }
 firebase-perf = { group = "com.google.firebase", name = "firebase-perf-ktx" }
 firebase-perf-plugin = { module = "com.google.firebase:perf-plugin", version = "1.4.2" }
 
 mlkit-language-id = { group = "com.google.mlkit", name = "language-id", version = "17.0.4" }
-mlkit-translate = { group = "com.google.mlkit", name = "translate", version = "17.0.1" }
+mlkit-translate = { group = "com.google.mlkit", name = "translate", version = "17.0.2" }
 
 [plugins]
+android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+kotlin-gradlePlugin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+androidLibrary = { id = "com.android.library", version.ref = "androidGradlePlugin" }
+google-gms = { id = "com.google.gms.google-services", version.ref = "googleServices" }
+androidTest = { id = "com.android.test", version.ref = "androidGradlePlugin" }
+androidx-baselineprofile = { id = "androidx.baselineprofile", version.ref = "androidx-baselineprofile" }
