--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 ksp = "1.9.21-1.0.16"
-androidGradlePlugin = "8.3.0-alpha18"
+androidGradlePlugin = "8.3.0-beta01"
 kotlin = "1.9.21"
 compose-compiler = "1.5.6"
 compose = "1.5.4"
