--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+error_prone_core = "2.16"
 ksp = "1.9.21-1.0.16"
 androidGradlePlugin = "8.3.0-beta01"
 kotlin = "1.9.21"
@@ -21,6 +22,7 @@ firebaseCrashlyticsGradle = "2.9.9"
 androidx-baselineprofile = "1.2.2"
 
 [libraries]
+error_prone_core = { module = "com.google.errorprone:error_prone_core", version.ref = "error_prone_core" }
 guava = { group = "com.google.guava", name = "guava", version = "31.0.1-jre" }
 coroutines-guava = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-guava", version = "1.7.1" }
 concurrent-futures = { group = "androidx.concurrent", name = "concurrent-futures-ktx", version = "1.1.0" }
@@ -43,6 +45,8 @@ compose-material-icons-extended = { group = "androidx.compose.material", name = 
 
 viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
+
+lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle" }
 
 material = { group = "androidx.compose.material", name = "material", version = "1.5.4" }
 
